# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  changelog.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: .maksukortti_test2.py.swp  maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoly.md  tehtava3.md  tehtava4.md
src/: clock.py  db_connection.py  entities.py  game_loop.py  index.py  initialize_database.py  level.py  menu.py  queries.py  renderer.py  stages.py  user.py
src/sprites/: door.py  floor.py  player.py  switch.py  transparent_floor.py
src/tests/: database_test.py  game_loop_test.py  gameloop_test.py  level_test.py  player_test.py
src/ui/: menu.py
