[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Joonas Ahovalli <9369455+joonas-a@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
invoke = "^1.7.0"
pygame-menu = "^4.2.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"
pylint = "^2.13.5"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
